<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.janetaa.gardenpergola.Tools">

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="270dp"
        android:layout_height="55dp"
        android:text="TextView"
        android:textSize="36sp"
        tools:text="@string/txtTitle"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/txtText1"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="-8dp"
        android:text="TextView"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle2"
        tools:text="@string/txtText1" />

    <TextView
        android:id="@+id/txtItem2"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/txtItem2"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtItem1" />

    <TextView
        android:id="@+id/txtItem3"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtItem2"
        tools:text="@string/txtItem3" />

    <TextView
        android:id="@+id/txtItem4"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:text="TextView"
        android:textSize="20sp"
        tools:text="@string/txtItem4"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="-9dp"
        app:layout_constraintTop_toBottomOf="@+id/txtItem3" />

    <TextView
        android:id="@+id/txtItem5"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:text="TextView"
        android:textSize="20sp"
        tools:text="@string/txtItem5"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtItem4" />

    <TextView
        android:id="@+id/txtItem6"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:text="TextView"
        android:textSize="20sp"
        tools:text="@string/txtItem6"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtItem5" />

    <TextView
        android:id="@+id/txtItem7"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:text="TextView"
        android:textSize="20sp"
        tools:text="@string/txtItem7"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtItem6" />

    <TextView
        android:id="@+id/txtItem8"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:text="TextView"
        android:textSize="20sp"
        tools:text="@string/txtItem8"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtItem7" />

    <TextView
        android:id="@+id/txtItem9"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:text="TextView"
        android:textSize="20sp"
        tools:text="@string/txtItem9"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="-14dp"
        app:layout_constraintTop_toBottomOf="@+id/txtItem8" />

    <TextView
        android:id="@+id/txtItem1"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:text="TextView"
        android:textSize="20sp"
        tools:text="@string/txtItem1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtText1" />

    <TextView
        android:id="@+id/txtItem10"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:text="TextView"
        android:textSize="20sp"
        tools:text="@string/txtItem10"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/txtItem9" />
</android.support.constraint.ConstraintLayout>
